RESOLVED FIXED 83990
Day of week labels are wrong if WebCore::firstDayOfWeek() is not 0
https://bugs.webkit.org/show_bug.cgi?id=83990
Summary Day of week labels are wrong if WebCore::firstDayOfWeek() is not 0
Kent Tamura
Reported 2012-04-14 18:54:17 PDT
Created attachment 137224 [details] Screenshot with firstDayOfWeek()==1 (Monday) Day of week labels are wrong if WebCore::firstDayOfWeek() is not 0
Attachments
Screenshot with firstDayOfWeek()==1 (Monday) (30.08 KB, image/png)
2012-04-14 18:54 PDT, Kent Tamura
no flags
Patch (2.80 KB, patch)
2012-04-14 19:29 PDT, Kent Tamura
haraken: review+
Kent Tamura
Comment 1 2012-04-14 19:29:11 PDT
Kentaro Hara
Comment 2 2012-04-14 20:17:02 PDT
Comment on attachment 137226 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=137226&action=review > Source/WebCore/ChangeLog:8 > + We passed the "weekStartDay" proerty value as a Nit: *property* > Source/WebCore/html/shadow/CalendarPickerElement.cpp:163 > +static void addProperty(const char* name, unsigned value, DocumentWriter& writer) I've not yet confirmed the spec, but should this be unsigned or int? What should happen if we pass a negative value for weekStartDay?
Kentaro Hara
Comment 3 2012-04-14 20:19:14 PDT
Comment on attachment 137226 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=137226&action=review > Source/WebCore/html/shadow/CalendarPickerElement.cpp:208 > + addProperty("weekStartDay", firstDayOfWeek(), writer); Nit: BTW, maybe we can rename firstDayOfWeek() to weekStartDay() in another patch.
Kent Tamura
Comment 4 2012-04-14 20:24:43 PDT
Comment on attachment 137226 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=137226&action=review >> Source/WebCore/ChangeLog:8 >> + We passed the "weekStartDay" proerty value as a > > Nit: *property* will fix >> Source/WebCore/html/shadow/CalendarPickerElement.cpp:163 >> +static void addProperty(const char* name, unsigned value, DocumentWriter& writer) > > I've not yet confirmed the spec, but should this be unsigned or int? What should happen if we pass a negative value for weekStartDay? This should be unsigned because WebCore::firstDayOfWeek() is unsigned. We need no signed numbers for now.
Kent Tamura
Comment 5 2012-04-14 20:32:04 PDT
Note You need to log in before you can comment on or make changes to this bug.