Source/WebCore/html/shadow/CalendarPickerElement.cpp
@@ -160,6 +160,14 @@ static void addProperty(const char* name, const String& value, DocumentWriter& w
     addLiteral(",\n", writer);
 }
 
+static void addProperty(const char* name, unsigned value, DocumentWriter& writer)
+{
+    writer.addData(name, strlen(name));
+    addLiteral(": ", writer);
+    addString(String::number(value), writer);
+    addLiteral(",\n", writer);
+}
+
 static void addProperty(const char* name, const Vector<String>& values, DocumentWriter& writer)
 {
     writer.addData(name, strlen(name));
@@ -197,7 +205,7 @@ void CalendarPickerElement::writeDocument(DocumentWriter& writer)
     addProperty("locale", defaultLanguage(), writer);
     addProperty("todayLabel", calendarTodayText(), writer);
     addProperty("clearLabel", calendarClearText(), writer);
-    addProperty("weekStartDay", String::number(firstDayOfWeek()), writer);
+    addProperty("weekStartDay", firstDayOfWeek(), writer);
     addProperty("monthLabels", monthLabels(), writer);
     addProperty("dayLabels", weekDayShortLabels(), writer);
     addLiteral("}\n", writer);
